# nexra-manager

./: .env.example  .gitignore  README.md  SETUP.md  config.py  main.py  pyproject.toml  requirements.txt
accounts/: __init__.py  coordinator.py  manager.py  store.py
bot/: __init__.py  client.py  handlers.py  keyboards.py  state.py
database/: __init__.py  db.py  models.py
deploy/: nexra-manager.service
scripts/: install.sh
sender/: __init__.py  campaign_config.py  content.py  engine.py  media.py  reporter.py
utils/: __init__.py  logger.py
